edit: Index, store, added some routes
A;adi rutas para la tienda, edite el index para que apareciera solo la descripcion, linkee en header la nueva tienda y a;adi los manofacturadores

--- a/web/src/views/product.ejs
+++ b/web/src/views/product.ejs
@@ -3,8 +3,8 @@
 <!-- Individual view for product -->
 
 <div class="jumbotron text-center">
-  <h1>My First Bootstrap Page</h1>
-  <p>Resize this responsive page to see the effect!</p>
+  <h1>Axolo stuff</h1>
+  <p>Making paper cities a little bit more paper</p>
 </div>
 
 <div class="container">
