--- a/web/src/views/include/header.ejs
+++ b/web/src/views/include/header.ejs
@@ -33,10 +33,13 @@
       <!-- Links -->
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="/">Tienda</a>
+          <a class="nav-link" href="/store">Tienda</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/cart">Carrito</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Manofacturadores</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/about">Sobre nosotros</a>
