subo maqueta home

--- a/web/src/views/include/footer.ejs
+++ b/web/src/views/include/footer.ejs
@@ -4,5 +4,9 @@
 <script src="js/main.js"></script>
 <script src="reload/reload.js"></script>
 </body>
-
+<footer class="conteiner">
+    <div class="col-12">
+        <p class="copyright">Copyright © 2020 Axolo | Proyecto creado para Hackaton 2020</p>
+    </div>
+</footer>
 </html>
