feat: donate routes grid skeleton
Added the routs and the sql query to get the information from the donate page, also, added a preview from manufacturer page for the donate hyper vincule. Its not really functional but cant do much without the sql db

--- a/web/src/views/manufacturer.ejs
+++ b/web/src/views/manufacturer.ejs
@@ -2,10 +2,6 @@
 
 <!-- Individual view for product -->
 
-<div class="jumbotron text-center">
-  <h1>My First Bootstrap Page</h1>
-  <p>Resize this responsive page to see the effect!</p>
-</div>
 
 <div class="container">
   <div class="row">
@@ -15,5 +11,12 @@
     </div>
     <% }); %>
   </div>
+  
 </div>
+
+<div class="jumbotron text-center">
+  <h1>Colabora!</h1>
+</div>
+
+
 <% include include/footer.ejs %>
