--- a/web/src/views/order.ejs
+++ b/web/src/views/order.ejs
@@ -1,48 +1,39 @@
 <% include include/header.ejs %>
 
 <div class="jumbotron text-center">
-  <h1>Checkout</h1>
-  <p>Resize this responsive page to see the effect!</p>
+  <h1>Finalizar compra</h1>
 </div>
 
 <div class="container">
   <div class="row">
     <div class="col-md-6">
       <div class="form-group">
-        <label for="name">Full name:</label>
+        <label for="name">Nombre completo:</label>
         <input type="text" class="form-control" id="name" name="name">
       </div>
       <div class="form-group">
-        <label for="email">Email:</label>
+        <label for="email">Correo:</label>
         <input type="email" class="form-control" id="email" name="email">
       </div>
       <div class="form-group">
-        <label for="pwd">Password:</label>
-        <input type="password" class="form-control" id="pwd" name="password">
-      </div>
-      <div class="form-group">
-        <label for="phone">Phone:</label>
+        <label for="phone">Num tel:</label>
         <input type="text" class="form-control" id="phone" name="phone">
       </div>
     </div>
     <div class="col-md-6">
       <div class="form-group">
-        <label for="address">Address:</label>
+        <label for="address">Dirección:</label>
         <input type="text" class="form-control" id="address" name="address">
       </div>
       <div class="form-group">
-        <label for="city">City:</label>
+        <label for="city">Ciudad:</label>
         <input type="text" class="form-control" id="city" name="city">
       </div>
       <div class="form-group">
-        <label for="state">State:</label>
+        <label for="state">Estado:</label>
         <input type="text" class="form-control" id="state" name="state">
       </div>
-      <div class="form-group">
-        <label for="country">Country:</label>
-        <input type="text" class="form-control" id="country" name="country">
-      </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button type="submit" class="btn btn-primary">Continuar</button>
     </div>
   </div>
 </div>
