--- a/web/src/views/about.ejs
+++ b/web/src/views/about.ejs
@@ -1,27 +1,26 @@
 <% include include/header.ejs %>
 
 <div class="jumbotron text-center">
-  <h1>My First Bootstrap Page</h1>
-  <p>Resize this responsive page to see the effect!</p>
-</div>
+  <div class="container">
+    <div class="row justify-content-md-center">
+      <div class="col-md-8 align-middle align-self-center ">
+        <h1>El mercado ecólogico con huella digital</h1>
+        <p>Bienvenido a Axolo Commerce! 🌱</p>
+        <p>
+          Una plataforma de E-commerce ecólogica y del ADN de las cosas.
 
-<div class="container">
-  <div class="row">
-    <div class="col-sm-4">
-      <h3>Column 1</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+          Todo lo que compras ha sido parte de alguna cadena de productos, el ADN te ayudará a entender que impacto
+          ecológico estarás evitando y además concientizar sobre el uso y beneficios de la reutilización de productos
+          sustentables.
+
+          Axolo Commerce es un ejercicio de comunidad y empatía por el medio ambiente 🪴♻
+        </p>
+      </div>
+      <div class="col-md-4">
+        <img src="img/logo.png" class="img-fluid" alt="Logo">
+      </div>
     </div>
-    <div class="col-sm-4">
-      <h3>Column 2</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-    </div>
-    <div class="col-sm-4">
-      <h3>Column 3</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-    </div>
+
   </div>
 </div>
 <% include include/footer.ejs %>
