--- a/web/src/views/components/product/grid.ejs
+++ b/web/src/views/components/product/grid.ejs
@@ -12,13 +12,13 @@
     <h4 class="card-title"><%= product.title %></h4>
     <% } %>
     <span class="badge badge-warning"><%= product.name %></span>
-    <p class="card-text">Price: ₹<%= product.price %></p>
-    <% if(title === 'Shop'){ %>
+    <p class="card-text">Precio: $<%= product.price %></p>
+    <% if(title === 'Tienda'){ %>
     <p class="card-text"><%= product.details.substring(0, 100)+' ...' %></p>
     <% } else {%>
     <p class="card-text"><%= product.details %></p>
     <% } %>
     <a href="/add-to-cart/pid-<%= product.pid %>" class="card-link"><i class="fa fa-cart-plus" aria-hidden="true"></i>
-      Add to cart</a>
+      Añadir al carrito</a>
   </div>
 </div>
