--- a/web/src/views/home.ejs
+++ b/web/src/views/home.ejs
@@ -17,10 +17,7 @@
 
 
 <div class="container">
-  <h2>Producers list</h2>
-  <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at
-    its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed
-    to using 'Content here, content here', making it look like readable English.</p>
+  <h2>Empresas</h2>
   <div class="row">
     <% manufacturers.forEach(function(manufacturer){ %>
     <div class="col-md-3">
