fix(qr): fix server crash on QR display

--- a/web/src/views/components/manufacturer/grid.ejs
+++ b/web/src/views/components/manufacturer/grid.ejs
@@ -10,7 +10,7 @@
     <% } else {%>
     <div class="row">
       <div class="col-3">
-        <img class="img-thumbnail rounded-circle" src="<%= manufacturer.picture %>" />
+        <img class="img-thumbnail" src="<%= manufacturer.picture %>" />
       </div>
       <div class="col-9 text-left">
         <p class="display-4"><%= manufacturer.title %></h4>
