style(web): visual overhaul for website

--- a/web/src/views/home.ejs
+++ b/web/src/views/home.ejs
@@ -1,18 +1,21 @@
 <% include include/header.ejs %>
 
-<div class="jumbotron text-center">
+<div class="jumbotron bg-cover text-white"
+  style="background-image: linear-gradient(to bottom, rgba(0,0,0,0.6) 0%,rgba(0,0,0,0.6) 100%), url(/public/img/vincent-van-zalinge-vUNQaTtZeOo-unsplash.jpg)">
   <div class="container">
-    <div class="row justify-content-md-center">
-      <div class="col-md-8 align-middle align-self-center ">
-        <h1>El mercado ecólogico con huella digital</h1>
-        <p>Bienvenido a Axolo Commerce! 🌱</p>
+    <dvi class="row">
+      <div class="col-md-8">
+
+        <h1 class="display-4 text-white">El mercado ecólogico con huella digital!</h1>
+        <p class="lead">Bienvenido a Axolo Commerce! 🌱</p>
+        <hr class="my-4">
+        <a class="btn btn-primary btn-lg" href="/about" role="button">Conoce más</a>
       </div>
       <div class="col-md-4">
-        <img src="img/logo.png" class="img-fluid" alt="Logo">
+        <img src="/public/img/logo.png" height="100" class="img-fluid" alt="Logo">
       </div>
-    </div>
-
   </div>
+</div>
 </div>
 
 
