--- a/web/src/views/manufacturer.ejs
+++ b/web/src/views/manufacturer.ejs
@@ -1,7 +1,7 @@
 <% include include/header.ejs %>
 
 <!-- Individual view for product -->
-<div class="container">
+<div class="container mt-5">
   <div class="row">
     <% manufacturers.forEach(function(manufacturer){ %>
     <div class="col-md-12 text-center">
