--- a/web/public/css/main.css
+++ b/web/public/css/main.css
@@ -1,7 +1,17 @@
-*{
-    box-sizing: border-box;
-    margin:0
+* {
+  box-sizing: border-box;
+  margin: 0;
 }
-body{
-    background-color: blue
+
+body,
+html {
+  background-color: #ffffff;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='36' height='72' viewBox='0 0 36 72'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23303030' fill-opacity='0.02'%3E%3Cpath d='M2 6h12L8 18 2 6zm18 36h12l-6 12-6-12z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+}
+
+.bg-cover {
+  background-attachment: static;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
