--- a/web/src/views/about.ejs
+++ b/web/src/views/about.ejs
@@ -17,7 +17,7 @@
         </p>
       </div>
       <div class="col-md-4">
-        <img src="img/logo.png" class="img-fluid" alt="Logo">
+        <img src="/public/img/logo.png" class="img-fluid" alt="Logo">
       </div>
     </div>
 
