--- a/web/src/views/include/footer.ejs
+++ b/web/src/views/include/footer.ejs
@@ -1,7 +1,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-<script src="js/main.js"></script>
+<script src="/public/js/main.js"></script>
 
 </body>
 <footer class="conteiner">
