--- a/web/src/views/include/header.ejs
+++ b/web/src/views/include/header.ejs
@@ -5,8 +5,8 @@
   <meta charset="utf-8" />
   <title><%= siteTitle+' | '+title %></title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" media="screen" href="/public/css/main.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="/public/css/bootstrap.min.css" />
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- Favicon -->
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <!-- Brand/logo -->
     <a class="navbar-brand" href="/"><i class="fa fa-recycle" aria-hidden="true"></i> Axolo Commerce</a>
 
@@ -31,7 +31,7 @@
     </button>
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <!-- Links -->
-      <ul class="navbar-nav">
+      <ul class="navbar-nav ml-auto">
         <li class="nav-item">
           <a class="nav-link" href="/">Productores</a>
         </li>
@@ -41,6 +41,10 @@
         <li class="nav-item">
           <a class="nav-link" href="/about">Sobre nosotros</a>
         </li>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="text" placeholder="Buscar">
+          <button class="btn btn-secondary my-2 my-sm-0" type="submit">Buscar</button>
+        </form>
         <!--       <li class="nav-item">
         <a class="nav-link" href="/contact">Contact</a>
       </li> -->
