--- a/web/src/views/manufacturer.ejs
+++ b/web/src/views/manufacturer.ejs
@@ -12,9 +12,84 @@
 
 </div>
 
-<div class="jumbotron text-center">
-  <h1>Colabora!</h1>
-</div>
+<a href="#" data-toggle="modal" data-target="#donationModal">
+  <div class="jumbotron text-center">
+    <h1>Colabora!</h1>
+  </div>
+</a>
 
+<!-- Modal -->
+<div class="modal fade" id="donationModal" tabindex="-1" aria-labelledby="donationModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="donationModalLabel">Petición de donación</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <script>
+          window.onload = () => {
+            addProductBtn.onclick = () => {
+              productListElement.appendChild(productSelect.content.cloneNode(true));
+            }
+          }
+        </script>
+        <form>
+          <div class="form-group">
+            <label for="emailInput">Correo Electr&oacute;nico</label>
+            <input type="email" class="form-control" id="emailInput" aria-describedby="emailHelp">
+            <small id="emailHelp" class="form-text text-muted">Para que el productor se comunique contigo.</small>
+          </div>
+          <div class="form-group" id="productListElement">
+            <label for="ProductsSelect">Producto a donar</label><br>
+            <button type="button" class="btn btn-link" id="addProductBtn">Agregar producto
+              <span>&#10133;</span></button>
+
+            <template id="productSelect">
+              <select class="form-control px-1 my-1" id="ProductsSelect">
+                <option selected>Seleccionar un producto...</option>
+                <% products.forEach(function(product){ %>
+                <option>
+                  <%= product.title %>
+                </option>
+                <% }); %>
+              </select>
+            </template>
+          </div>
+          <div class="form-group">
+            <label for="exampleInputPassword1">Petici&oacute;n <small id="emailHelp"
+                class="form-text text-muted">Detalla con que materiales podr&iacute;as apoyar esta
+                iniciativa.</small></label>
+
+            <textarea class="form-control p-2" rows="3" id="exampleInputPassword1"></textarea>
+          </div>
+          <div class="form-group">
+            <div class="form-check">
+
+
+              <input class="form-check-input" type="radio" name="exampleRadios" id="distShipRadio" value="option2">
+              <label class="form-check-label" for="distShipRadio">
+                Entrega por mi cuenta
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="exampleRadios" id="distCollectRadio" value="option1"
+                checked>
+              <label class="form-check-label" for="distCollectRadio">
+                Necesito que lo colecten
+              </label>
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+        <button type="button" class="btn btn-primary">Enviar</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 <% include include/footer.ejs %>
