Change footer design

--- a/web/src/views/include/footer.ejs
+++ b/web/src/views/include/footer.ejs
@@ -4,7 +4,7 @@
 <script src="/public/js/main.js"></script>
 
 </body>
-<footer class="conteiner">
+<footer class="d-block py-2 text-center" style="background-color: #f5f5f5;">
   <div class="col-12">
     <p class="copyright">Copyright © 2020 Axolo | Proyecto creado para Hackaton 2020</p>
   </div>
